--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,13 @@
-/*Responsive*/
-@media (max-width: 638px){
-    .tarjetas, .Elige_Ataque, .mascota,.botonesAtaque{
+@media (max-width: 638px) {
+
+    .tarjetas,
+    .Elige_Ataque,
+    .mascota,
+    .botonesAtaque {
         display: flex;
         flex-direction: column;
     }
+
     body {
         background-image: url("./imagenes/fondo.jpg");
         background-position: center center;
@@ -11,6 +15,7 @@
         background-attachment: fixed;
         overflow-x: hidden;
     }
+
     /*Elegir personajes*/
 
     .tarjetaCharmander {
@@ -30,7 +35,7 @@
         border-radius: 10px;
         border: 1px solid black;
     }
-    
+
     .tarjetaStitch {
         color: white;
         font-family: 'Fredoka One', cursive;
@@ -48,7 +53,7 @@
         border-radius: 10px;
         border: 1px solid black;
     }
-    
+
     .tarjetaHongo {
         color: white;
         font-family: 'Fredoka One', cursive;
@@ -67,147 +72,150 @@
         border: 1px solid black;
     }
 
-    
-.tarjetaCharmander:hover,#Charmander:checked + label {
-    color: white;
-    font-family: 'Fredoka One', cursive;
-    align-self: center;
-    justify-content: center;
-    display: flex;
-    font-size: 24px;
-    flex-direction: column;
-    width: 190px;
-    height: 150px;
-    background: rgb(223, 128, 128);
-    padding: 10px;
-    box-sizing: border-box;
-    margin: 5px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
+
+    .tarjetaCharmander:hover,
+    #Charmander:checked+label {
+        color: white;
+        font-family: 'Fredoka One', cursive;
+        align-self: center;
+        justify-content: center;
+        display: flex;
+        font-size: 24px;
+        flex-direction: column;
+        width: 190px;
+        height: 150px;
+        background: rgb(223, 128, 128);
+        padding: 10px;
+        box-sizing: border-box;
+        margin: 5px;
+        border-radius: 10px;
+        border: 1px solid black;
+    }
 
 
-.tarjetaStitch:hover,#Stitch:checked + label {
-    color: white;
-    font-family: 'Fredoka One', cursive;
-    align-self: center;
-    justify-content: center;
-    display: flex;
-    font-size: 24px;
-    flex-direction: column;
-    width: 190px;
-    height: 150px;
-    background: rgb(76, 76, 180);
-    padding: 10px;
-    box-sizing: border-box;
-    margin: 5px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
+    .tarjetaStitch:hover,
+    #Stitch:checked+label {
+        color: white;
+        font-family: 'Fredoka One', cursive;
+        align-self: center;
+        justify-content: center;
+        display: flex;
+        font-size: 24px;
+        flex-direction: column;
+        width: 190px;
+        height: 150px;
+        background: rgb(76, 76, 180);
+        padding: 10px;
+        box-sizing: border-box;
+        margin: 5px;
+        border-radius: 10px;
+        border: 1px solid black;
+    }
 
-.tarjetaHongo:hover, #Hongo:checked + label {
-    color: white;
-    font-family: 'Fredoka One', cursive;
-    align-self: center;
-    justify-content: center;
-    display: flex;
-    font-size: 24px;
-    flex-direction: column;
-    width: 190px;
-    height: 150px;
-    background: rgb(98, 223, 98);
-    padding: 10px;
-    box-sizing: border-box;
-    margin: 5px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
+    .tarjetaHongo:hover,
+    #Hongo:checked+label {
+        color: white;
+        font-family: 'Fredoka One', cursive;
+        align-self: center;
+        justify-content: center;
+        display: flex;
+        font-size: 24px;
+        flex-direction: column;
+        width: 190px;
+        height: 150px;
+        background: rgb(98, 223, 98);
+        padding: 10px;
+        box-sizing: border-box;
+        margin: 5px;
+        border-radius: 10px;
+        border: 1px solid black;
+    }
 
-/*Vida*/
-.health{
-    display: flex;
-    flex-direction: row;
+    /*Vida*/
+    .health {
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: 150px 150px;
+        background-color: transparent;
+        border-radius: 10px;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-family: 'Fredoka One', cursive;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 
-    grid-template-columns: 150px 150px 150px;
-    background-color: transparent;
-    border-radius: 10px;
-    height: 100%;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-family: 'Fredoka One', cursive;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-.one{
-    grid-column: 1;
-    grid-row: 1;
-    background-color: white;
-    height: 162px;
-    width: 160px;
-    align-items: center;
-    margin: 10px;
-    align-content: center;
-    font-size: 20px;
-    border-radius: 10px;
-    border: 1px solid black;
-}
-.vs{
-    margin:60px;
+    .one {
+        grid-column: 1;
+        grid-row: 1;
+        background-color: white;
+        height: 162px;
+        width: 160px;
+        align-items: center;
+        margin: 10px;
+        align-content: center;
+        font-size: 20px;
+        border-radius: 10px;
+        border: 1px solid black;
+    }
 
-}
-.two{
-    grid-column: 3;
-    grid-row: 1;
-    height: 162px;
-    width: 160px;
-    align-items: center;
-    margin: -35px;
-    font-size: 20px;
-    align-content: center;
-    border-radius: 10px;
-    border: 1px solid black;
-}
+    .vs {
+        margin: 60px;
 
-.three{
-    grid-column: 2;
-    grid-row: 1;
-    background-color: transparent;
-    height: 180px;
-    width: 160px;
-    align-items: center;
-    margin: 10px;
-    font-size: 24px;
-    align-content: center;
-}
+    }
 
+    .two {
+        grid-column: 2;
+        grid-row: 1;
+        height: 162px;
+        width: 160px;
+        align-items: center;
+        margin: -35px;
+        margin-top: 20px;
+        font-size: 20px;
+        align-content: center;
+        border-radius: 10px;
+        border: 1px solid black;
+    }
 
-    .botonesAtaque{
+    .three {
+        grid-column: 2;
+        grid-row: 1;
+        background-color: transparent;
+        height: 180px;
+        width: 130px;
+        align-items: center;
+        margin: 10px;
+        font-size: 24px;
+        align-content: center;
+        display: none;
+    }
+
+    .botonesAtaque {
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         height: 100%;
+        margin-top: 65px;
         width: 52%;
         flex-wrap: nowrap;
         align-items: center;
         justify-content: center;
         justify-items: center;
     }
-    .three{
-        grid-column: 2;
-        grid-row: 1;
-        background-color: transparent;
-        height: 180px;
-        width: 160px;
-        align-items: center;
-        margin: -65px;
-        font-size: 24px;
-        align-content: center; 
-    }
 
-    .fixear{
+
+    .fixear {
         width: 350px;
         align-items: center;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
     }
 }
