--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@
     margin: 1px;
 }
 
+#subtitulo {
+    color: rgb(255, 230, 0);
+    font-family: 'Fredoka One', cursive;
+    text-align: center;
+    font-size: 200%;
+    padding: 1px;
+    margin: 1px;
+}
+
 body {
     background-image: url("./imagenes/fondo.jpg");
     background-position: center center;
@@ -179,6 +188,32 @@ input{
     display: inline-block;
     font-size: 24px;
     font-family: 'Fredoka One', cursive;
+}
+.botoncito2 {
+    background-color: #e7d918;
+    border: none;
+    color: white;
+    flex-direction: row;
+    padding: 15px 32px;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid black;
+    display: inline-block;
+    font-size: 24px;
+    font-family: 'Fredoka One', cursive;
+    margin: 10px;
+    height: 50%;
+}
+
+.botones2{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
 }
 
 /*Vida*/
@@ -382,6 +417,4 @@ input{
     align-items: center;
     justify-content: center;
 }
-#mapa{
-    border: 2px solid white;
-}
+
